<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RepoDetailsActivity">

    <ProgressBar
        android:id="@+id/progressBarDetailsScreen"
        style="?android:attr/progressBarStyle"
        android:layout_width="178dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tableLayoutDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding"
            android:shrinkColumns="2"
            android:visibility="invisible">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_name" />

                <TextView
                    android:id="@+id/textDetailsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_full_name" />

                <TextView
                    android:id="@+id/textDetailsFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_html_url" />

                <TextView
                    android:id="@+id/textDetailsUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_copy_url" />

                <ImageButton
                    android:id="@+id/imageButtonCopyUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:contentDescription="@string/copy_url"
                    app:srcCompat="?attr/actionModeCopyDrawable" />

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_description" />

                <TextView
                    android:id="@+id/textDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_language" />

                <TextView
                    android:id="@+id/textDetailsLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_size" />

                <TextView
                    android:id="@+id/textDetailsSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_watchers" />

                <TextView
                    android:id="@+id/textDetailsWatchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_subscribers" />

                <TextView
                    android:id="@+id/textDetailsSubscribers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_forks" />

                <TextView
                    android:id="@+id/textDetailsForks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_open_issues" />

                <TextView
                    android:id="@+id/textDetailsOpenIssuesCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_is_template" />

                <TextView
                    android:id="@+id/textDetailsIsTemplate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_has_issues" />

                <TextView
                    android:id="@+id/textDetailsHasIssues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:paddingRight="@dimen/table_columns_space"
                    android:text="@string/repo_has_projects" />

                <TextView
                    android:id="@+id/textDetailsHasProjects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_has_wiki" />

                <TextView
                    android:id="@+id/textDetailsHasWiki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_has_downloads" />

                <TextView
                    android:id="@+id/textDetailsHasDownloads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_archived" />

                <TextView
                    android:id="@+id/textDetailsArchived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/table_rows_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/repo_license_name" />

                <TextView
                    android:id="@+id/textDetailsLicenseName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>